# vigra_c

./: .gitignore  CMakeLists.txt  Makefile  NEWS  README.md
doc/: Doxyfile.in
images/: vigra_c_logo.psd
msvc2010/: vigra_c.sln  vigra_c.vcxproj
msvc2011/: vigra_c.sln  vigra_c.vcxproj
src/: CMakeLists.txt  config.h  os_settings.h  vigra_all_c.h  vigra_c.cxx  vigra_c.h  vigra_convert_c.cxx  vigra_convert_c.h  vigra_convert_c.hxx  vigra_filters_c.cxx  vigra_filters_c.h  vigra_filters_c.hxx  vigra_houghtransform_c.cxx  vigra_houghtransform_c.h  vigra_imgproc_c.cxx  vigra_imgproc_c.h  vigra_imgproc_c.hxx  vigra_impex_c.cxx  vigra_impex_c.h  vigra_impex_c.hxx  vigra_kernelutils_c.h  vigra_morphology_c.cxx  vigra_morphology_c.h  vigra_segmentation_c.cxx  vigra_segmentation_c.h  vigra_splineimageview_c.cxx  vigra_splineimageview_c.h  vigra_splineimageview_c.hxx  vigra_tensors_c.cxx  vigra_tensors_c.h
src/vigra_ext/: houghtransform.hxx
