cmake_minimum_required(VERSION 2.8.11)

project(vigra_c)

set(VIGRA_C_BIN_DIR  ${CMAKE_CURRENT_SOURCE_DIR}/bin)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${VIGRA_C_BIN_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${VIGRA_C_BIN_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${VIGRA_C_BIN_DIR})

foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
	string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${VIGRA_C_BIN_DIR})
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${VIGRA_C_BIN_DIR})
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${VIGRA_C_BIN_DIR})
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPE)

set(CMAKE_MACOSX_RPATH FALSE)

# Find VIGRA
find_package(Vigra)
if(Vigra_FOUND)
    include_directories(${Vigra_INCLUDE_DIRS})
endif()

# Find the FFTW lib
find_library(FFTW_LIBRARY
     NAMES fftw-3.3 fftw3 fftw)
set(FFTW_LIBRARIES "${FFTW_LIBRARY}")
if(UNIX AND NOT WIN32)
     find_library(FFTW_libm_LIBRARY
         NAMES m)
     list(APPEND FFTW_LIBRARIES "${FFTW_libm_LIBRARY}")
endif()

add_subdirectory(src)